Frontend of the start page added

--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -1,3 +1,10 @@
 <ion-content>
-  
+  <div class="game">
+    <div class="center">
+      <img src="./assets/imgs/players.png" id="players">
+      <h1 id="title">Tic Tac Toe</h1>
+      <h2>The game</h2>
+      <button ion-button color="secondary">Jugar</button>
+    </div>
+  </div>
 </ion-content>
