First design of the table game

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,3 +1,62 @@
 <ion-content>
-  <p>Home</p>
+  <div class="game">
+    <div class="center">
+      <h1 class="animated fadeIn">Tic Tac Toe</h1>
+      <!-- TODO: improve this with ngFor. -->
+      <div style="width: 100%;" padding>
+        <ion-row>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button class="btn-space" color="light">
+              <!-- Imagen jugador -->
+            </button>
+          </ion-col>
+        </ion-row>
+      </div>
+      <button ion-button large color="secondary">Volver a jugar</button>
+    </div>
+  </div>
 </ion-content>
