Bug fixed with the animate fadeIn

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="game">
-    <div class="center" *ngIf="matrix">
-      <h1 class="animated" ngClass="titleAnimated">Tic Tac Toe</h1>
+    <div class="center animated fadeIn" *ngIf="matrix">
+      <h1>Tic Tac Toe</h1>
       <div class="table" padding>
         <ion-row *ngFor="let row of matrix">
           <ion-col text-center *ngFor="let arr of row">
