--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,17 @@
     <div class="center animated fadeIn" *ngIf="matrix">
       <h1>Tic Tac Toe</h1>
       <div class="table" padding>
-        <ion-row *ngFor="let row of matrix">
-          <ion-col text-center *ngFor="let arr of row">
-            <button ion-button class="btn-space" color="light">
+        <ion-row *ngFor="let row of matrix; index as r">
+          <ion-col text-center *ngFor="let col of row; index as c">
+            <div tappable class="btn-space" color="light" (click)="set(r, c)">
               <!-- Player image -->
-              <img src="./assets/imgs/o.png">
-            </button>
+              <img src="./assets/imgs/x.png" *ngIf="col === 'x'">
+              <img src="./assets/imgs/o.png" *ngIf="col === 'o'">
+            </div>
           </ion-col>
         </ion-row>
       </div>
-      <button ion-button large color="secondary">Volver a jugar</button>
+      <button ion-button large color="secondary" (click)="newGame()">Volver a jugar</button>
     </div>
   </div>
 </ion-content>
