Check the winner

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
   <script src="cordova.js"></script>
   <link rel="stylesheet" href="assets/css/animate.min.css">
 
+  <!-- <audio autoplay loop>
+    <source src="assets/music/Modern_Castle_Atmosphere.mp3" type="audio/mp3">
+  </audio> -->
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
