--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
   <script src="cordova.js"></script>
   <link rel="stylesheet" href="assets/css/animate.min.css">
 
-  <!-- <audio autoplay loop>
+  <audio autoplay loop>
     <source src="assets/music/Modern_Castle_Atmosphere.mp3" type="audio/mp3">
-  </audio> -->
+  </audio>
 
   <!-- un-comment this code to enable service worker
   <script>
