Change importing the font

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   <style>
     @font-face {
       font-family: '8bit';
-      src: url('assets/fonts/8bit.ttf');
+      src: url('./assets/fonts/8bit.ttf');
       font-weight: normal;
       font-style: normal;
     }
