--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,6 +15,7 @@
       <h2 *ngIf="winner" class="animated tada msg-winner">{{ winner }} ganador</h2>
       <h2 *ngIf="!winner && draw" class="animated tada msg-winner">empate</h2>
       <button ion-button large color="secondary" (click)="newGame()">Volver a jugar</button>
+      <button ion-button large margin-top color="secondary" (click)="back()">Inicio</button>
     </div>
   </div>
 </ion-content>
